--- a/14-lists-C/14-lists.lyx
+++ b/14-lists-C/14-lists.lyx
@@ -113,7 +113,7 @@ status open
 \end_layout
 
 \begin_layout Date
-13/12/2018
+05/12/2019
 \end_layout
 
 \begin_layout Standard
@@ -141,7 +141,7 @@ Informatica A
 \begin_layout Right Address
 corso per Ing.
  Gestionale a.a.
- 2018/19
+ 2019/20
 \end_layout
 
 \begin_layout Standard
@@ -1248,7 +1248,7 @@ list_elem_t* queue_top(list_elem_t* list) {
 \end_layout
 
 \begin_layout Section
-HTML, quando voi nasceste
+HTML: back to boomers' time
 \end_layout
 
 \begin_layout Quotation
